--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "cloudflare-docker-proxy"
 compatibility_date = "2023-12-01"
+main = "src/index.js"
 
 [dev]
 ip = "0.0.0.0"
@@ -37,3 +38,6 @@ name = "cloudflare-docker-proxy-staging"
 [env.staging.vars]
 MODE = "staging"
 TARGET_UPSTREAM = ""
+
+[assets]
+directory = "./dist"
