--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,12 +8,12 @@ port = 8787
 local_protocol = "http"
 
 [env.vars]
-CUSTOM_DOMAIN = "libcuda.so"
+CUSTOM_DOMAIN = "tuqiang103.cn"
 
 [env.dev.vars]
 MODE = "debug"
 TARGET_UPSTREAM = "https://registry-1.docker.io"
-CUSTOM_DOMAIN = "exmaple.com"
+CUSTOM_DOMAIN = "tuqiang103.cn"
 
 [env.production]
 name = "cloudflare-docker-proxy"
