--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "cloudflare-docker-proxy"
 compatibility_date = "2023-12-01"
 main = "src/index.js"
+account_id = "cad15eb5227ed983070ac1fcbc74b563"
 
 [dev]
 ip = "0.0.0.0"
